--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ header {
     padding: 10px 0;
 }
 
+
 .weather-container {
     background: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(20px);
@@ -147,7 +148,7 @@ header {
 }
 
 .search-box button {
-    width: 100%;
+    width: 50%;
     padding: 12px;
     margin-top: 10px;
     background-color: #2196F3;
@@ -181,6 +182,26 @@ header {
         background-position: 0% 50%;
     }
 }
+.export-box button:focus {
+    outline: none;
+    box-shadow: 0 0 5px rgba(33, 150, 243, 0.5);
+}
+
+.export-box input:focus + button {
+    box-shadow: 0 0 5px rgba(33, 150, 243, 0.5);
+}
+
+.export-box input {
+    width: 50%;
+    padding: 12px;
+    border: 2px solid rgba(255, 255, 255, 0.4);
+    border-radius: 8px;
+    font-size: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    transition: all 0.4s ease;
+}
+
 
 .search-box button:focus {
     outline: none;
@@ -192,7 +213,7 @@ header {
 }
 
 .search-box input {
-    width: 100%;
+    width: 50%;
     padding: 12px;
     border: 2px solid rgba(255, 255, 255, 0.4);
     border-radius: 8px;
